--- a/Project/About.html
+++ b/Project/About.html
@@ -164,7 +164,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container center">
+            <div class="container center" style="padding: 100px 0;">
                 <h5>Feedback</h5>
                 <span class="line gold"></span>
                 <h2>Khách hàng của chúng tôi<span class="t-gold"> đánh giá</span></h2>
@@ -192,16 +192,6 @@
             <div class="container center" data-aos="fade-right">
                 <span class="feedback-line"></span>
                 <div class="center"> 
-                    <img class="feedback-img" src="img/view4.jpg">
-                </div>
-                <div class="feedback">
-                    <h5>Trang Web rất tốt cho những ai thích du lịch. Tôi đã tìm được vài tip nhờ các bài review để có trải nghiệm tốt hơn khi đi du lịch.</h5>
-                    <h6 class="t-gold" style="margin: 5px auto;">The Hung</h6>
-                </div>
-            </div>  
-            <div class="container center" data-aos="fade-left">
-                <span class="feedback-line"></span>
-                <div class="center"> 
                     <img class="feedback-img" src="img/view3.jpg">
                 </div>
                 <div class="feedback">
@@ -210,26 +200,38 @@
                 </div>
                 <span class="feedback-line"></span>
             </div>
+            <div class="container center" data-aos="fade-left">
+                <span class="feedback-line"></span>
+                <div class="center"> 
+                    <img class="feedback-img" src="img/view4.jpg">
+                </div>
+                <div class="feedback">
+                    <h5>Trang Web rất tốt cho những ai thích du lịch. Tôi đã tìm được vài tip nhờ các bài review để có trải nghiệm tốt hơn khi đi du lịch.</h5>
+                    <h6 class="t-gold" style="margin: 5px auto;">The Hung</h6>
+                </div>
+            </div>  
         </div>
     </div>
     </section>
     <section>
         <div class="about-banner--form">
             <div class="container center">
-                <h5 style="letter-spacing: 2px;">stay connected</h5>
-                <span class="line gold"></span>
-                <div class="social-container m-20 center">
-                    <div>
-                        <a href="" class="btn btn-light icon"><i class="fab fa-facebook-f" style="color: goldenrod;"></i></a>
-                    </div>
-                    <div>
-                        <a href="" class="btn btn-light icon"><i class="fab fa-google-plus-g" style="color: goldenrod;"></i></a>
-                    </div>
-                    <div>
-                        <a href="" class="btn btn-light icon"><i class="fab fa-instagram" style="color: goldenrod;"></i></a>
-                    </div>
-                    <div>
-                        <a href="" class="btn btn-light icon"><i class="fab fa-twitter" style="color: goldenrod;"></i></a>
+                <div style="margin: 86px auto;">
+                    <h5 style="letter-spacing: 2px;">Stay connected</h5>
+                    <span class="line gold"></span>
+                    <div class="social-container m-20 center">
+                        <div>
+                            <a href="" class="btn btn-light icon"><i class="fab fa-facebook-f" style="color: goldenrod;"></i></a>
+                        </div>
+                        <div>
+                            <a href="" class="btn btn-light icon"><i class="fab fa-google-plus-g" style="color: goldenrod;"></i></a>
+                        </div>
+                        <div>
+                            <a href="" class="btn btn-light icon"><i class="fab fa-instagram" style="color: goldenrod;"></i></a>
+                        </div>
+                        <div>
+                            <a href="" class="btn btn-light icon"><i class="fab fa-twitter" style="color: goldenrod;"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
