--- a/Project/Promotions.html
+++ b/Project/Promotions.html
@@ -85,7 +85,7 @@
                 </div> 
             </div>
             <div class="promotion-img-back">
-                <img src="img/promo/promo-background.jpg" alt="">
+                <img src="img/promo-background.jpg" alt="">
             </div>
         </div>
     </section>
@@ -109,57 +109,78 @@
                         <div class="row mt-5 mb-5 row-promotion">
                             <div class="col-lg-4">
                                 <div class="promotion-content-img">
-                                    <img class="promotion-img" src="img/promo/Hoi-An.jpg">
+                                    <img class="promotion-img" src="img/promo-img/promo-hoi-an.jpg">
+                                    <button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button>
                                         <div class="title">
-                                            <h5 style="text-align: center; margin: 0px; color: white;">Hội An</h5>
+                                            <h2 class="t-white">Hội An</h2>
+                                            <span class="line white"></span>
+                                            <h6 class="t-white">Phố cổ</h6>
                                         </div>
                                 </div>       
                             </div>
                             <div class="col-lg-4">
                                 <div class="promotion-content-img">
-                                    <img class="promotion-img" src="img/promo/Hoi-An.jpg">
+                                    <img class="promotion-img" src="img/promo-img/promo-da-lat.jpg">
+                                    <button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button>
                                         <div class="title">
-                                            <h5 style="text-align: center; margin: 0px; color: white">Hội An</h5>
+                                            <h2 class="t-white">Đà Lạt</h2>
+                                            <span class="line white"></span>
+                                            <h6 class="t-white">Phố mù sương</h6>
                                         </div>
                                 </div>       
                             </div>
                             <div class="col-lg-4">
                                 <div class="promotion-content-img">
-                                    <img class="promotion-img" src="img/promo/Hoi-An.jpg">
+                                    <img class="promotion-img" src="img/promo-img/promo-da-nang.jpg">
+                                    <button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button>
                                         <div class="title">
-                                            <h5 style="text-align: center; margin: 0px; color: white">Hội An</h5>
+                                            <h2 class="t-white">Đà Nẵng</h2>
+                                            <span class="line white"></span>
+                                            <h6 class="t-white">Thành phố biển</h6>
                                         </div>
                                 </div>       
                             </div>
                             <div class="col-lg-4">
                                 <div class="promotion-content-img">
-                                    <img class="promotion-img" src="img/promo/Hoi-An.jpg">
+                                    <img class="promotion-img" src="img/promo-img/promo-ha-giang.jpg">
+                                    <button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button>
                                         <div class="title">
-                                            <h5 style="text-align: center; margin: 0px; color: white">Hội An</h5>
+                                            <h2 class="t-white">Hà Giang</h2>
+                                            <span class="line white"></span>
+                                            <h6 class="t-white">Miền cao</h6>
                                         </div>
                                 </div>       
                             </div>
                             <div class="col-lg-4">
                                 <div class="promotion-content-img">
-                                    <img class="promotion-img" src="img/promo/Hoi-An.jpg">
+                                    <img class="promotion-img" src="img/promo-img/promo-nha-trang.jpg">
+                                    <button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button>
                                         <div class="title">
-                                            <h5 style="text-align: center; margin: 0px; color: white">Hội An</h5>
+                                            <h2>Nha Trang</h2>
+                                            <span class="line black"></span>
+                                            <h6>Thành phố biển</h6>
                                         </div>
                                 </div>       
                             </div>
                             <div class="col-lg-4">
                                 <div class="promotion-content-img">
-                                    <img class="promotion-img" src="img/promo/Hoi-An.jpg">
+                                    <img class="promotion-img" src="img/promo-img/promo-ninh-binh.jpg">
+                                    <button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button>
                                         <div class="title">
-                                            <h5 style="text-align: center; margin: 0px; color: white">Hội An</h5>
+                                            <h2 class="t-white">Ninh Bình</h2>
+                                            <span class="line white"></span>
+                                            <h6 class="t-white">Nông thôn</h6>
                                         </div>
                                 </div>       
                             </div>
                             <div class="col-lg-4">
                                 <div class="promotion-content-img">
-                                    <img class="promotion-img" src="img/promo/Hoi-An.jpg">
+                                    <img class="promotion-img" src="img/promo-img/promo-vinh-ha-long.jpg">
+                                    <button class="btn promo-btn-viewmore"><h5>Xem thêm</h5></button>
                                         <div class="title">
-                                            <h5 style="text-align: center; margin: 0px; color: white">Hội An</h5>
+                                            <h2 class="t-white">Vịnh Hạ Long</h2>
+                                            <span class="line white"></span>
+                                            <h6 class="t-white">Kỳ quan</h6>
                                         </div>
                                 </div>       
                             </div>
@@ -171,20 +192,22 @@
     <section>
         <div class="about-banner--form">
             <div class="container center">
-                <h5 style="letter-spacing: 2px;">Stay connected</h5>
-                <span class="line gold"></span>
-                <div class="social-container m-20 center">
-                    <div>
-                        <a href="" class="btn btn-light icon"><i class="fab fa-facebook-f" style="color: goldenrod;"></i></a>
-                    </div>
-                    <div>
-                        <a href="" class="btn btn-light icon"><i class="fab fa-google-plus-g" style="color: goldenrod;"></i></a>
-                    </div>
-                    <div>
-                        <a href="" class="btn btn-light icon"><i class="fab fa-instagram" style="color: goldenrod;"></i></a>
-                    </div>
-                    <div>
-                        <a href="" class="btn btn-light icon"><i class="fab fa-twitter" style="color: goldenrod;"></i></a>
+                <div style="margin: 86px auto;">
+                    <h5 style="letter-spacing: 2px;">Stay connected</h5>
+                    <span class="line gold"></span>
+                    <div class="social-container m-20 center">
+                        <div>
+                            <a href="" class="btn btn-light icon"><i class="fab fa-facebook-f" style="color: goldenrod;"></i></a>
+                        </div>
+                        <div>
+                            <a href="" class="btn btn-light icon"><i class="fab fa-google-plus-g" style="color: goldenrod;"></i></a>
+                        </div>
+                        <div>
+                            <a href="" class="btn btn-light icon"><i class="fab fa-instagram" style="color: goldenrod;"></i></a>
+                        </div>
+                        <div>
+                            <a href="" class="btn btn-light icon"><i class="fab fa-twitter" style="color: goldenrod;"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
