--- a/Project/Index.html
+++ b/Project/Index.html
@@ -256,7 +256,7 @@
     </section>
 
     <section>
-        <div class="section about--section">
+        <div class="about--section">
             <div class="container">
                 <div class="about--content center">
                     <h5>The Agency</h5>
@@ -284,57 +284,56 @@
                     <h5>The Blog</h5>
                     <span class="line gold"></span>
                     <h2>Latest from the <span class="t-gold">Blog</span></h2>
-                    <!-- <div class= "container-fluid">                         -->
-                        <div class= "row blog--content__review">
-                            <div class ="col-12 col-sm-6 col-md-4">
-                                <div class="blog--item">
-                                    <a href="">
-                                        <img src="img/blog-img/blog-phan-thiet.jpg" alt="">
-                                    </a>
-                                    <h3 class="blog--item__title">Deep inside "Sand Ocean"</h3>
-                                    <p>By: <span class="t-gold">Nguyễn Minh Luân</span></p>
-                                    <div class="blog--item_view">
-                                        <img src="img/view1.jpg" alt="">
-                                        <img src="img/view2.jpg" alt="">
-                                        <img src="img/view3.jpg" alt="">
-                                        <span class="views">+1850</span>        
-                                    </div>
+                    <div class= "row blog--content__review">
+                        <div class ="col-12 col-sm-6 col-md-4">
+                            <div class="blog--item">
+                                <a href="">
+                                    <img src="img/blog-img/blog-phan-thiet.jpg" alt="">
+                                </a>
+                                <h3 class="blog--item__title">Deep inside "Sand Ocean"</h3>
+                                <p>By: <span class="t-gold">Nguyễn Minh Luân</span></p>
+                                <div class="blog--item_view">
+                                    <img src="img/view1.jpg" alt="">
+                                    <img src="img/view2.jpg" alt="">
+                                    <img src="img/view3.jpg" alt="">
+                                    <span class="views">+1850</span>        
                                 </div>
                             </div>
-                            <div class ="col-12 col-sm-6 col-md-4">
-                                <div class="blog--item">
-                                    <a href="">
-                                        <img src="img/blog-img/blog-ha-noi.jpg" alt="">
-                                    </a>
-                                    <h3 class="blog--item__title">Cuộc sống ở Thủ Đô</h3>
-                                    <p>By: <span class="t-gold">Lê Hồng Phong</span></p>
-                                    <div class="blog--item_view">
-                                        <img src="img/view2.jpg" alt="">
-                                        <img src="img/view1.jpg" alt="">
-                                        <span class="views">+2351</span> 
-                                    </div>
-                                </div>
-                            </div>
-                            <div class ="col-12 col-sm-6 col-md-4">
-                                <div class="blog--item">
-                                    <a href="">
-                                        <img src="img/blog-img/blog-sapa.jpg" alt="">
-                                    </a>
-                                    <h3 class="blog--item__title">Ở miền cao có lạnh ?</h3>
-                                    <p>By: <span class="t-gold">Nguyễn Đình Nhật</span></p>
-                                    <div class="blog--item_view">
-                                        <img src="img/view3.jpg" alt="">
-                                        <img src="img/view1.jpg" alt="">
-                                        <img src="img/view2.jpg" alt="">
-                                        <span class="views">+2001</span>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <span class="line-gold"></span>
                         </div>
-                    <!-- </div> -->
+                        <div class ="col-12 col-sm-6 col-md-4">
+                            <div class="blog--item">
+                                <a href="">
+                                    <img src="img/blog-img/blog-ha-noi.jpg" alt="">
+                                </a>
+                                <h3 class="blog--item__title">Cuộc sống ở Thủ Đô</h3>
+                                <p>By: <span class="t-gold">Lê Hồng Phong</span></p>
+                                <div class="blog--item_view">
+                                    <img src="img/view2.jpg" alt="">
+                                    <img src="img/view1.jpg" alt="">
+                                    <span class="views">+2351</span> 
+                                </div>
+                            </div>
+                        </div>
+                        <div class ="col-12 col-sm-6 col-md-4">
+                            <div class="blog--item">
+                                <a href="">
+                                    <img src="img/blog-img/blog-sapa.jpg" alt="">
+                                </a>
+                                <h3 class="blog--item__title">Ở miền cao có lạnh ?</h3>
+                                <p>By: <span class="t-gold">Nguyễn Đình Nhật</span></p>
+                                <div class="blog--item_view">
+                                    <img src="img/view3.jpg" alt="">
+                                    <img src="img/view1.jpg" alt="">
+                                    <img src="img/view2.jpg" alt="">
+                                    <span class="views">+2001</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+            </div>
+            <div style="margin-top: 100px; margin-left: 20%; margin-right: 20%; width: 60%;">
+                <span class="line gold" style="width: 100%;"></span>
             </div>
         </div>
     </section>
@@ -386,7 +385,7 @@
     <section>
         <div class="banner--form">
             <div class="container center">
-                <div class="banner--form__signup">
+                <div class="banner--form__signup" style="margin-bottom: 100px ">
                     <h5 class="t-gold">News Letter</h5>
                     <span class="line-black"></span>
                     <h2>Don't <span class="t-gold">miss</span> it!</h2>
@@ -406,7 +405,7 @@
                 </div>
                 <h5 style="font-weight: bold; letter-spacing: 2px;">stay connected</h5>
                 <span class="line gold"></span>
-                <div class="social-container m-20 center">
+                <div class="social-container center">
                     <div>
                         <a href="" class="btn btn-light icon"><i class="fab fa-facebook-f" style="color: goldenrod;"></i></a>
                     </div>
