--- a/test-expanding-cards.html
+++ b/test-expanding-cards.html
@@ -10,13 +10,14 @@
 <body>
     <!-- Container  -->
    <div class="container">
-    <!-- Div with section and active -->
-    <div class="section one active"></div>
-    <!-- All another div with section  -->
-    <div class="section two"></div>
-    <div class="section three"></div>
-    <div class="section four"></div>
-</div><script>
+        <!-- Div with section and active -->
+        <div class="section one active"></div>
+        <!-- All another div with section  -->
+        <div class="section two"></div>
+        <div class="section three"></div>
+        <div class="section four"></div>
+    </div>
+<script>
     // Selecting all sections with class of section
     const sections = document.querySelectorAll('.section')
   
