--- a/Project/Index.html
+++ b/Project/Index.html
@@ -52,13 +52,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Themes</a>
+                        <a class="nav-link" href="themes.html">Themes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="Promotions.html">Promotions</a>
                     </li> 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Blogs</a>
+                        <a class="nav-link" href="blogs.html">Blogs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="About.html">About</a>
